[package]
name = "litecoin-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.7", package = "gtk4" }
glib = "0.18"
rusqlite = { version = "0.31", features = ["bundled"] }
bip39 = "2.0"
rand = "0.8"
dirs-next = "2.0"
bcrypt = "0.11.0"
bitcoin = "0.30"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }